# duckdb-ocaml

./: .gitignore  .gitmodules  LICENSE  README.md  duckdb.opam  dune-project
.github/workflows/: ci.yml  odoc.yaml
lib/: dune  function_description.ml  type_description.ml
src/extension/: dune  entrypoint.c  extension.ml  functions.c
src/stubs/: duckdb_stubs.ml  dune  function_description.ml  type_description.ml
src/wrapper/: appender.ml  appender.mli  connection.ml  connection.mli  data_chunk.ml  data_chunk.mli  database.ml  database.mli  date_.ml  date_.mli  duckdb.ml  dune  function.ml  function.mli  heterogeneous_list.ml  heterogeneous_list.mli  hugeint.ml  hugeint.mli  interval.ml  interval.mli  packed_column.ml  packed_column.mli  query.ml  query.mli  query_result.ml  query_result.mli  replacement_scan.ml  replacement_scan.mli  resource.ml  resource.mli  result_.ml  result_.mli  scalar_function.ml  scalar_function.mli  table_function.ml  table_function.mli  time_.ml  time_.mli  timestamp.ml  timestamp.mli  (+9 more)
test/: data_chunk_test.ml  date_test.ml  duckdb_test.ml  dune  function_test.ml  hugeint_test.ml  interval_test.ml  numeric_test.ml  prepared_test.ml  prepared_test.mli  result_test.ml  single_thread_fix.ml  single_thread_fix.mli  test_helpers.ml  test_helpers.mli  time_test.ml  timestamp_test.ml  value_test.ml  vector_test.ml
test/patches/: dune
