(library
 (public_name duckdb.stubs)
 (name duckdb_stubs)
 (libraries core)
 (inline_tests)
 (preprocess
  (pps ppx_jane))
 (foreign_archives duckdb)
 (ctypes
  (external_library_name duckdb)
  ;(deps ../../vendor/duckdb/src/include/duckdb.h)
  (build_flags_resolver
   (vendored
    (c_flags :standard "-I../../vendor/duckdb/src/include")
    (c_library_flags :standard -lstdc++)))
  (headers
   (include "duckdb.h"))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

(rule
 (copy ../../vendor/dllduckdb.so dllduckdb.so))

(rule
 (copy ../../vendor/libduckdb.a libduckdb.a))
